[gd_scene load_steps=3 format=3 uid="uid://cgbgia2e7vacn"]

[ext_resource type="Theme" uid="uid://cblg4ct5bcghv" path="res://interfaces/menu_theme.tres" id="1_483ls"]
[ext_resource type="Script" path="res://interfaces/options.gd" id="2_2vn3r"]

[node name="Options" type="PanelContainer"]
custom_minimum_size = Vector2(250, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -101.0
offset_top = -127.0
offset_right = 116.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_483ls")
script = ExtResource("2_2vn3r")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme = ExtResource("1_483ls")

[node name="Settings_Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_483ls")
theme_type_variation = &"title"
text = "CONFIGURAÇÕES"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Volume_Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_483ls")
theme_type_variation = &"subtitle"
text = "Volume"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Master_Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Geral: "

[node name="Master" type="Button" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("1_483ls")
text = "100%"
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Music_Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Música:"

[node name="Music" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("1_483ls")
text = "100%"
alignment = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SFX_Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Efeitos Sonoros:"

[node name="SFX" type="Button" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("1_483ls")
text = "100%"
alignment = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Fullscreen_Label" type="Label" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
text = "Tela Cheia:"

[node name="Fullscreen" type="Button" parent="VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("1_483ls")
text = "NÃO"
alignment = 2

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("1_483ls")
text = "Voltar"

[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Master" to="." method="_on_master_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Music" to="." method="_on_music_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/SFX" to="." method="_on_sfx_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer4/Fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
